Refactor game components and styles; update titles, add instruction button, and enhance layout

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="Un emocionante juego social donde debes descubrir al impostor." />
     <meta name="twitter:image" content="/og-image.png" />
     
-    <title>🎭 El Impostor - Juego Social Interactivo</title>
+    <title>El Impostor - Juego Social Interactivo</title>
   </head>
   <body>
     <div id="root"></div>
